--- a/css.css
+++ b/css.css
@@ -1,1 +1,44 @@
+body {
+    background-color: 616065;
+    text-align: center;
+}
+.navbar-expand-sm {
+    background-color: 928F94;
+    border-color: #E7E7E7;
+}
+img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+table, th, td {
+    font-family: Arial, Helvetica, sans-serif;
+    border: 1px solid black;
+    border-collapse: collapse;
+    margin-left: auto;
+    margin-right: auto;
+}
+ul { 
+    display: table;
+    margin: 0 auto;
+}
+li { 
+    text-align:left;
+    font-family: 'Montserrat', 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
 
+.boxes { 
+    background-color: rgba(255, 255, 255, 0);
+    padding: 40px;
+    margin: 20px;
+    margin-left: auto;
+    margin-right: auto;
+    width: 45%;
+    text-align: center;
+}
+
+#gridmargins {
+    margin-left: 40px;
+    margin-right: 40px;
+    border-radius: 20%;
+}
