--- a/css.css
+++ b/css.css
@@ -1,3 +1,7 @@
+h1 {
+    text-align: center;
+}
+
 body {
     background-color: 616065;
     text-align: center;
@@ -22,10 +26,9 @@ ul {
     display: table;
     margin: 0 auto;
 }
-li { 
-    text-align:left;
-    font-family: 'Montserrat', 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-}
+li {
+    display: inline;
+  }
 
 .boxes { 
     background-color: rgba(255, 255, 255, 0);
