--- a/sin.css
+++ b/sin.css
@@ -2,26 +2,12 @@ h1 {
     text-align: center;
 }
 
-/* body { */
-    /* background-color: 616065 */
-    /* text-align: center; */
-/* }
-.navbar-expand-sm {
-    background-color: 928F94;
-    border-color: #E7E7E7;
-}
-img {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-}
-table, th, td {
-    font-family: Arial, Helvetica, sans-serif;
-    border: 1px solid black;
-    border-collapse: collapse;
-    margin-left: auto;
-    margin-right: auto;
-} */table {margin-left: auto;
+ body { 
+     background-color: 616065 
+     text-align: center; 
+ }
+
+table {margin-left: auto;
     margin-right: auto;}
     table td       {border:inset 0px #000;}
     table tr#Stier  {background-color:#E15554;}
@@ -41,19 +27,3 @@ ul {
 li {
     display: inline;
   }
-
-/* .boxes { 
-    background-color: rgba(255, 255, 255, 0);
-    padding: 40px;
-    margin: 20px;
-    margin-left: auto;
-    margin-right: auto;
-    width: 45%;
-    text-align: center;
-}
-
-#gridmargins {
-    margin-left: 40px;
-    margin-right: 40px;
-    border-radius: 20%;
-} */
