--- a/sin.css
+++ b/sin.css
@@ -6,7 +6,6 @@ h1 {
 
 table.table1 {margin-left: auto;
     margin-right: auto;}
-    table td       {border:inset 0px #000;}
     table tr#Stier  {background-color:#E15554;}
     table tr#Atier  {background-color:#E1893F;}
     table tr#Btier  {background-color:#E1BC29;}
@@ -15,13 +14,17 @@ table.table1 {margin-left: auto;
     table tr#Ftier  {background-color:#7768AE;}
     table tr#Other  {background-color:#616065;}
 
-table.table2 {margin-right: auto;
+table.table2 {margin-left: auto;
+    margin-right: auto;
   border: 2px solid #616065;
   background-color: #D6D5D7;}
 
 td.td2 {text-align: center}
 
-th.th2 {width: 130px}
+th.th2 {width: 150px;
+text-align: center}
+
+th.th3 {width: 800px}
 
 ul {
     position: fixed;
